# WhisperSyncCopy

./: Cargo.toml  README.md
src/: commands.rs  config.rs  locales.rs  main.rs  menu.rs  settings.rs  sync.rs
src/locales/: en.toml  ru.toml
